--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -30,9 +30,9 @@ http {
 
     # Default server definition
     server {
-        listen [::]:8080 default_server;
-        listen 8080 default_server;
-        server_name _;
+        listen [::]:8282 default_server;
+        listen 8989;
+        server_name pokepla.net:8989;
 
         sendfile off;
 
@@ -69,14 +69,14 @@ http {
         # Deny access to . files, for security
         location ~ /\. {
             log_not_found off;
-            deny all;
+            deny ;
         }
 
         # Allow fpm ping and status from localhost
         location ~ ^/(fpm-status|fpm-ping)$ {
             access_log off;
-            allow 127.0.0.1;
-            deny all;
+            allow all;
+         #   deny all;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
             fastcgi_pass 127.0.0.1:9000;
